# M3_Miniprojekt_Integration_Distribution-

./: .gitignore  Dockerfile  README.md  app.py  export_model.py  model.onnx  model.py  pyproject.toml
